# ChangeLog for dev-perl/Error
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Error/ChangeLog,v 1.85 2014/04/12 10:44:30 zlogene Exp $

  12 Apr 2014; Mikle Kolyada <zlogene@gentoo.org> Error-0.170.210.ebuild:
  x86 stable wrt bug #498608

  12 Apr 2014; Mikle Kolyada <zlogene@gentoo.org> Error-0.170.210.ebuild:
  amd64 stable wrt bug #498608

  28 Mar 2014; Jeroen Roovers <jer@gentoo.org> Error-0.170.210.ebuild:
  Stable for HPPA (bug #498608).

  26 Mar 2014; Markus Meier <maekke@gentoo.org> Error-0.170.210.ebuild:
  arm stable, bug #498608

  21 Mar 2014; Mikle Kolyada <zlogene@gentoo.org> Error-0.170.210.ebuild:
  Bump to EAPI=5

  20 Jan 2014; Mike Frysinger <vapier@gentoo.org> Error-0.170.160.ebuild,
  Error-0.170.190.ebuild, Error-0.170.200.ebuild, Error-0.170.210.ebuild:
  Add arm64 love.

*Error-0.170.210 (03 Sep 2013)

  03 Sep 2013; Patrick Lauer <patrick@gentoo.org> +Error-0.170.210.ebuild:
  Bump

*Error-0.170.200 (16 Aug 2013)

  16 Aug 2013; Patrick Lauer <patrick@gentoo.org> +Error-0.170.200.ebuild:
  Bump

  19 Feb 2013; Zac Medico <zmedico@gentoo.org> Error-0.170.190.ebuild:
  Add ~arm-linux keyword.

  06 Jan 2013; Torsten Veller <tove@gentoo.org> -Error-0.170.170.ebuild,
  -Error-0.170.180.ebuild:
  Cleanup

*Error-0.170.190 (24 Nov 2012)

  24 Nov 2012; Torsten Veller <tove@gentoo.org> +Error-0.170.190.ebuild:
  Version bump

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

*Error-0.170.180 (09 May 2012)

  09 May 2012; Torsten Veller <tove@gentoo.org> +Error-0.170.180.ebuild:
  Version bump

  28 Apr 2012; Alexis Ballier <aballier@gentoo.org> Error-0.170.170.ebuild:
  keyword ~amd64-fbsd

*Error-0.170.170 (12 Feb 2012)

  12 Feb 2012; Torsten Veller <tove@gentoo.org> +Error-0.170.170.ebuild:
  Version bump

  30 Jul 2011; Torsten Veller <tove@gentoo.org> Error-0.170.160.ebuild:
  Drop ~sparc-fbsd KEYWORD
