@@ -1,5 +1,5 @@
 ####################################################################
-# $Header: /var/cvsroot/gentoo-x86/profiles/package.mask,v 1.15562 2014/04/12 18:41:26 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/package.mask,v 1.15563 2014/04/13 14:52:13 sping Exp $
 #
 # When you add an entry to the top of this file, add your name, the date, and
 # an explanation of why something is getting masked. Please be extremely
@@ -29,6 +29,9 @@
 ## app-misc/some-package
 
 #--- END OF EXAMPLES ---
+# Sebastian Pipping <sping@gentoo.org> (13 Apr 2014)
+# Reduced functionality (bug https://github.com/jonls/redshift/issues/68)
+~x11-misc/redshift-1.9
 
 # Samuli Suominen <ssuominen@gentoo.org> (12 Apr 2014)
 # Dead upstream, unused in gentoo-x86.
