@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Error
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Error/ChangeLog,v 1.85 2014/04/12 10:44:30 zlogene Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Error/ChangeLog,v 1.86 2014/04/13 14:31:18 zlogene Exp $
+
+  13 Apr 2014; Mikle Kolyada <zlogene@gentoo.org> Error-0.170.210.ebuild:
+  alpha stable wrt bug #498608
 
   12 Apr 2014; Mikle Kolyada <zlogene@gentoo.org> Error-0.170.210.ebuild:
   x86 stable wrt bug #498608
